[gd_scene load_steps=109 format=3 uid="uid://6mg0218wr8d3"]

[ext_resource type="Script" uid="uid://6thixcfensa5" path="res://scripts/game.gd" id="1_lbhrr"]
[ext_resource type="Texture2D" uid="uid://c068ddsgt30hd" path="res://assets/paddles/colours/AMARANTH PINK.png" id="2_15b3c"]
[ext_resource type="FontFile" uid="uid://bpa3b045tjca3" path="res://assets/fonts/8-BIT WONDER.TTF" id="2_lnu2h"]
[ext_resource type="Shader" uid="uid://dfqojpieyk4b8" path="res://shaders/star_parallax.gdshader" id="2_p57ef"]
[ext_resource type="Texture2D" uid="uid://t5qr2juqsxll" path="res://assets/images/achievements/ACHIEVEMENT BANNER.png" id="3_lnu2h"]
[ext_resource type="Texture2D" uid="uid://buwpcosp5rqwu" path="res://assets/paddles/colours/BLACK.png" id="3_veukt"]
[ext_resource type="Texture2D" uid="uid://dojugimre3pby" path="res://assets/paddles/colours/BLUE.png" id="4_nbjts"]
[ext_resource type="Texture2D" uid="uid://die3j7setls4f" path="res://assets/paddles/colours/CYAN.png" id="5_i1hsc"]
[ext_resource type="Texture2D" uid="uid://c23n7o0b84fra" path="res://assets/images/X.png" id="5_iywne"]
[ext_resource type="Texture2D" uid="uid://cafrn0f6mxdec" path="res://assets/paddles/colours/DANDELION.png" id="6_ounyb"]
[ext_resource type="Texture2D" uid="uid://bw8g3tpb13t2g" path="res://assets/paddles/colours/EUCALYPTUS FLOWER.png" id="7_iekjf"]
[ext_resource type="Texture2D" uid="uid://mt7fjlh00kqh" path="res://assets/paddles/colours/FUSCHIA.png" id="8_okmmv"]
[ext_resource type="Texture2D" uid="uid://bgkg3mcnjd3pi" path="res://assets/paddles/colours/GREEN.png" id="9_ja1h7"]
[ext_resource type="Texture2D" uid="uid://iyova1nk0jbu" path="res://assets/paddles/colours/HARLEQUIN.png" id="10_p4npv"]
[ext_resource type="Texture2D" uid="uid://bkr20rfndcgn8" path="res://assets/paddles/colours/INDIGO.png" id="11_xjcjm"]
[ext_resource type="Texture2D" uid="uid://crfgf1b8vd6cp" path="res://assets/paddles/colours/JADE.png" id="12_tc8uq"]
[ext_resource type="Texture2D" uid="uid://d2w44e1fmbfl6" path="res://assets/paddles/colours/KHAKI.png" id="13_h5tdf"]
[ext_resource type="Texture2D" uid="uid://dv62ppfnogqvk" path="res://assets/paddles/colours/LEMON CHIFFON.png" id="14_xbifu"]
[ext_resource type="Texture2D" uid="uid://cb84n3e6bixi0" path="res://assets/paddles/colours/MAGENTA.png" id="15_gdf8r"]
[ext_resource type="Texture2D" uid="uid://bm146kh0fquyt" path="res://assets/paddles/colours/NEON GREEN.png" id="16_x8trd"]
[ext_resource type="Texture2D" uid="uid://uey7tv70yb3k" path="res://assets/paddles/colours/ORANGE.png" id="17_s33c4"]
[ext_resource type="Texture2D" uid="uid://deodvanxkocgc" path="res://assets/paddles/colours/PURPLE.png" id="18_3hv4c"]
[ext_resource type="Texture2D" uid="uid://by446rpfdr86x" path="res://assets/paddles/colours/QUARTILE.png" id="19_vniw0"]
[ext_resource type="Texture2D" uid="uid://bejrxvl7y2x0t" path="res://assets/paddles/colours/RED.png" id="20_lddog"]
[ext_resource type="Texture2D" uid="uid://cscwu201ht08h" path="res://assets/paddles/colours/SCARLET.png" id="21_boxkr"]
[ext_resource type="Texture2D" uid="uid://1inratv8ku47" path="res://assets/paddles/colours/TANGERINE.png" id="22_de5we"]
[ext_resource type="Texture2D" uid="uid://b608vh7d0rhjh" path="res://assets/paddles/colours/UBE.png" id="23_8tghg"]
[ext_resource type="Texture2D" uid="uid://dfbxd641kumud" path="res://assets/paddles/colours/VIOLET.png" id="24_473mq"]
[ext_resource type="Texture2D" uid="uid://b1jbfv3d4obe8" path="res://assets/paddles/colours/WHEAT.png" id="25_1va0p"]
[ext_resource type="Texture2D" uid="uid://2xfmi0pwa1uj" path="res://assets/paddles/colours/WHITE.png" id="26_2tvof"]
[ext_resource type="Texture2D" uid="uid://b3jfkvohw2gau" path="res://assets/paddles/colours/XYLOPHONE.png" id="27_fsry6"]
[ext_resource type="Texture2D" uid="uid://iwbaaxa3l44h" path="res://assets/paddles/colours/YELLOW.png" id="28_eky20"]
[ext_resource type="Texture2D" uid="uid://del35wt8104us" path="res://assets/paddles/colours/ZENCHUA.png" id="29_o3ulk"]
[ext_resource type="Texture2D" uid="uid://xha16aqwrnj0" path="res://assets/paddles/memes/AMOGUS.png" id="30_ghitk"]
[ext_resource type="Texture2D" uid="uid://bbgripm5gy31s" path="res://assets/paddles/memes/MINION.png" id="31_rundi"]
[ext_resource type="Texture2D" uid="uid://tk2uk1yd5k7m" path="res://assets/paddles/pride/AGENDER.png" id="32_7kwaa"]
[ext_resource type="Texture2D" uid="uid://d3q6xlmxessf7" path="res://assets/paddles/pride/ASEXUAL.png" id="33_jye5l"]
[ext_resource type="Texture2D" uid="uid://i64c65kk7yrc" path="res://assets/paddles/pride/BI.png" id="34_rvhxa"]
[ext_resource type="Texture2D" uid="uid://bayfsm7yild4v" path="res://assets/paddles/pride/BIGENDER.png" id="35_rekj2"]
[ext_resource type="Texture2D" uid="uid://cvnqo54spmdcy" path="res://assets/paddles/pride/DEMIGENDER.png" id="36_ip3rd"]
[ext_resource type="Texture2D" uid="uid://cru3pdpcjpigr" path="res://assets/paddles/pride/DEMISEXUAL.png" id="37_s6met"]
[ext_resource type="Texture2D" uid="uid://bsuf0khwo3wsv" path="res://assets/paddles/pride/GAY.png" id="38_7itva"]
[ext_resource type="Texture2D" uid="uid://djotwotit5ofh" path="res://assets/paddles/pride/GENDERFLUID.png" id="39_o5ny5"]
[ext_resource type="Texture2D" uid="uid://c2vbsnduybp5o" path="res://assets/paddles/pride/GENDERQUEER.png" id="40_7ss2i"]
[ext_resource type="Texture2D" uid="uid://ccsbpo0u2hc4t" path="res://assets/paddles/pride/INTERSEX.png" id="41_1id2h"]
[ext_resource type="Texture2D" uid="uid://dd24mhhxxdw73" path="res://assets/paddles/pride/LESBIAN.png" id="42_awynl"]
[ext_resource type="Texture2D" uid="uid://bxs6q1f1sbpvt" path="res://assets/paddles/pride/LGBT POC.png" id="43_65ua2"]
[ext_resource type="Texture2D" uid="uid://cv2jbybj8qvby" path="res://assets/paddles/pride/LGBT.png" id="44_mowrl"]
[ext_resource type="Texture2D" uid="uid://ya0wbjdi2r56" path="res://assets/paddles/pride/LIPSTICK LESBIAN.png" id="45_g3qou"]
[ext_resource type="Texture2D" uid="uid://dynsgov54ynvu" path="res://assets/paddles/pride/NB.png" id="46_vvi2r"]
[ext_resource type="Texture2D" uid="uid://00y7jag52cdm" path="res://assets/paddles/pride/PAN.png" id="47_r2n6p"]
[ext_resource type="Texture2D" uid="uid://dhma24ypmi14t" path="res://assets/paddles/pride/POLYAMOROUS.png" id="48_deyyv"]
[ext_resource type="Texture2D" uid="uid://b8obpw55h1wpd" path="res://assets/paddles/pride/POLYSEXUAL.png" id="49_vnd7u"]
[ext_resource type="Texture2D" uid="uid://c1cqwt4fiykuj" path="res://assets/paddles/pride/TRANS.png" id="50_fccuv"]
[ext_resource type="Texture2D" uid="uid://t51lmf7xpgkw" path="res://assets/balls/colours/AMARANTH PINK.png" id="51_kpl5h"]
[ext_resource type="Texture2D" uid="uid://cp28yxg1ngrh2" path="res://assets/balls/colours/BLACK.png" id="52_nej56"]
[ext_resource type="Texture2D" uid="uid://crqwucdjdn8lm" path="res://assets/balls/colours/BLUE.png" id="53_vgiqa"]
[ext_resource type="Texture2D" uid="uid://dlhqk8t5wp4vs" path="res://assets/balls/colours/CYAN.png" id="54_1uieh"]
[ext_resource type="Texture2D" uid="uid://chk3rkgavsgh6" path="res://assets/balls/colours/DANDELION.png" id="55_x2ts8"]
[ext_resource type="Texture2D" uid="uid://6itoq2s1ya4h" path="res://assets/balls/colours/EUCALYPTUS FLOWER.png" id="56_1fiuy"]
[ext_resource type="Texture2D" uid="uid://crdikdyvvqktn" path="res://assets/balls/colours/FUSCHIA.png" id="57_fikvi"]
[ext_resource type="Texture2D" uid="uid://dkl2458rpxq4p" path="res://assets/balls/colours/GREEN.png" id="58_iwdqm"]
[ext_resource type="Texture2D" uid="uid://c5x6kab8b6880" path="res://assets/balls/colours/HARLEQUIN.png" id="59_l0ny2"]
[ext_resource type="Texture2D" uid="uid://0gyv5in8fvv3" path="res://assets/balls/colours/INDIGO.png" id="60_h1bth"]
[ext_resource type="Texture2D" uid="uid://dvob257787m45" path="res://assets/balls/colours/JADE.png" id="61_6cwij"]
[ext_resource type="Texture2D" uid="uid://fuu3jd7f2ltc" path="res://assets/balls/colours/KHAKI.png" id="62_bqsge"]
[ext_resource type="Texture2D" uid="uid://rtgw61eynnal" path="res://assets/balls/colours/LEMON CHIFFON.png" id="63_k2jov"]
[ext_resource type="Texture2D" uid="uid://b5nokcuen657" path="res://assets/balls/colours/MAGENTA.png" id="64_osiit"]
[ext_resource type="Texture2D" uid="uid://nf7agd2ouaep" path="res://assets/balls/colours/NEON GREEN.png" id="65_wvj0x"]
[ext_resource type="Texture2D" uid="uid://c4pewn7rhx2lv" path="res://assets/balls/colours/ORANGE.png" id="66_d1om7"]
[ext_resource type="Texture2D" uid="uid://cplwwnvhabrxi" path="res://assets/balls/colours/PURPLE.png" id="67_g0jan"]
[ext_resource type="Texture2D" uid="uid://cs4sn2ea63tuh" path="res://assets/balls/colours/QUARTILE.png" id="68_uh8v6"]
[ext_resource type="Texture2D" uid="uid://bqv44tx83frtt" path="res://assets/balls/colours/RED.png" id="69_1fd0d"]
[ext_resource type="Texture2D" uid="uid://bhg382dge1irw" path="res://assets/balls/colours/TANGERINE.png" id="70_0mjh4"]
[ext_resource type="Texture2D" uid="uid://nximkikasyo2" path="res://assets/balls/colours/UBE.png" id="71_bkxpl"]
[ext_resource type="Texture2D" uid="uid://4fksw2n65sjr" path="res://assets/balls/colours/VIOLET.png" id="72_y2jf0"]
[ext_resource type="Texture2D" uid="uid://cxy7jq5k280em" path="res://assets/balls/colours/WHEAT.png" id="73_g33qm"]
[ext_resource type="Texture2D" uid="uid://1enab4skvw2v" path="res://assets/balls/colours/WHITE.png" id="74_hy75c"]
[ext_resource type="Texture2D" uid="uid://d1j1khq4asuy7" path="res://assets/balls/colours/XYLOPHONE.png" id="75_vaoao"]
[ext_resource type="Texture2D" uid="uid://dnm46ibqs4q57" path="res://assets/balls/colours/YELLOW.png" id="76_uaaia"]
[ext_resource type="Texture2D" uid="uid://cdu8lvoysgjfm" path="res://assets/balls/colours/ZENCHUA.png" id="77_x1ulb"]
[ext_resource type="Texture2D" uid="uid://c6kekks4wh7gg" path="res://assets/balls/pride/BI.png" id="78_k4q15"]
[ext_resource type="Texture2D" uid="uid://cc12j181plrgk" path="res://assets/balls/pride/AGENDER.png" id="78_s33c4"]
[ext_resource type="Texture2D" uid="uid://chbcpyjtok0lc" path="res://assets/balls/pride/ASEXUAL.png" id="79_3hv4c"]
[ext_resource type="Texture2D" uid="uid://v2k22uo5cqmi" path="res://assets/balls/pride/GAY.png" id="79_7bpt6"]
[ext_resource type="Texture2D" uid="uid://dyrc0r2jh60p5" path="res://assets/balls/pride/LESBIAN.png" id="80_rowo6"]
[ext_resource type="Texture2D" uid="uid://dk2wr07wt2hmc" path="res://assets/balls/pride/RAINBOW.png" id="81_max3w"]
[ext_resource type="Texture2D" uid="uid://hciajw1tovu5" path="res://assets/balls/pride/BIGENDER.png" id="81_vniw0"]
[ext_resource type="Texture2D" uid="uid://b1f1dmexktbyq" path="res://assets/balls/pride/DEMIGENDER.png" id="82_lddog"]
[ext_resource type="Texture2D" uid="uid://cc0ev14vg3316" path="res://assets/balls/pride/TRANS.png" id="82_nmeq6"]
[ext_resource type="Texture2D" uid="uid://ce7ul0fhnduhy" path="res://assets/balls/pride/DEMISEXUAL.png" id="83_boxkr"]
[ext_resource type="Texture2D" uid="uid://dmb64aymli3qd" path="res://assets/balls/pride/GENDERFLUID.png" id="85_de5we"]
[ext_resource type="Texture2D" uid="uid://dfahr66g6h1ne" path="res://assets/balls/pride/GENDERQUEER.png" id="86_8tghg"]
[ext_resource type="Texture2D" uid="uid://c7bvpfy65kc1l" path="res://assets/balls/pride/INTERSEX.png" id="87_473mq"]
[ext_resource type="Texture2D" uid="uid://chtupqsjl5xq4" path="res://assets/balls/pride/LGBTPOC.png" id="89_1va0p"]
[ext_resource type="Texture2D" uid="uid://do8uvlgmps2rp" path="res://assets/balls/pride/LIPSTICK LESBIAN.png" id="90_2tvof"]
[ext_resource type="Texture2D" uid="uid://w0t87r374uen" path="res://assets/balls/pride/NB.png" id="91_fsry6"]
[ext_resource type="Texture2D" uid="uid://bqsg2mf1vfi5o" path="res://assets/balls/pride/PANSEXUAL.png" id="92_eky20"]
[ext_resource type="Texture2D" uid="uid://qijrg1oeojd7" path="res://assets/balls/pride/POLYAMOROUS.png" id="93_o3ulk"]
[ext_resource type="Texture2D" uid="uid://bi8ovwun35i0l" path="res://assets/balls/pride/POLYAMORY.png" id="94_ghitk"]
[ext_resource type="Texture2D" uid="uid://5oehgnnyo5yb" path="res://assets/balls/pride/POLYSEXUAL.png" id="95_rundi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p57ef"]
shader = ExtResource("2_p57ef")
shader_parameter/scroll_speed = Vector2(0.01, 0.005)
shader_parameter/star_density = 0.995
shader_parameter/base_brightness = 0.5
shader_parameter/time_scale = 0.05

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lbhrr"]
size = Vector2(67, 333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p57ef"]
size = Vector2(67, 333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iywne"]
size = Vector2(64, 64)

[sub_resource type="Animation" id="Animation_iywne"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AchievementBanner:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AchievementBanner:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1920, 763)]
}

[sub_resource type="Animation" id="Animation_lbhrr"]
resource_name = "ShowBanner"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AchievementBanner:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 3.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AchievementBanner:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 3.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1920, 763), Vector2(1105, 763), Vector2(1105, 763), Vector2(1922, 763)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p57ef"]
_data = {
&"RESET": SubResource("Animation_iywne"),
&"ShowBanner": SubResource("Animation_lbhrr")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_lbhrr")
colour_paddles = Array[Texture2D]([ExtResource("2_15b3c"), ExtResource("3_veukt"), ExtResource("4_nbjts"), ExtResource("5_i1hsc"), ExtResource("6_ounyb"), ExtResource("7_iekjf"), ExtResource("8_okmmv"), ExtResource("9_ja1h7"), ExtResource("10_p4npv"), ExtResource("11_xjcjm"), ExtResource("12_tc8uq"), ExtResource("13_h5tdf"), ExtResource("14_xbifu"), ExtResource("15_gdf8r"), ExtResource("16_x8trd"), ExtResource("17_s33c4"), ExtResource("18_3hv4c"), ExtResource("19_vniw0"), ExtResource("20_lddog"), ExtResource("21_boxkr"), ExtResource("22_de5we"), ExtResource("23_8tghg"), ExtResource("24_473mq"), ExtResource("25_1va0p"), ExtResource("26_2tvof"), ExtResource("27_fsry6"), ExtResource("28_eky20"), ExtResource("29_o3ulk")])
meme_paddles = Array[Texture2D]([ExtResource("30_ghitk"), ExtResource("31_rundi")])
pride_paddles = Array[Texture2D]([ExtResource("32_7kwaa"), ExtResource("33_jye5l"), ExtResource("34_rvhxa"), ExtResource("35_rekj2"), ExtResource("36_ip3rd"), ExtResource("37_s6met"), ExtResource("38_7itva"), ExtResource("39_o5ny5"), ExtResource("40_7ss2i"), ExtResource("41_1id2h"), ExtResource("42_awynl"), ExtResource("43_65ua2"), ExtResource("44_mowrl"), ExtResource("45_g3qou"), ExtResource("46_vvi2r"), ExtResource("47_r2n6p"), ExtResource("48_deyyv"), ExtResource("49_vnd7u"), ExtResource("50_fccuv")])
colour_balls = Array[Texture2D]([ExtResource("51_kpl5h"), ExtResource("52_nej56"), ExtResource("53_vgiqa"), ExtResource("54_1uieh"), ExtResource("55_x2ts8"), ExtResource("56_1fiuy"), ExtResource("57_fikvi"), ExtResource("58_iwdqm"), ExtResource("59_l0ny2"), ExtResource("60_h1bth"), ExtResource("61_6cwij"), ExtResource("62_bqsge"), ExtResource("63_k2jov"), ExtResource("64_osiit"), ExtResource("65_wvj0x"), ExtResource("66_d1om7"), ExtResource("67_g0jan"), ExtResource("68_uh8v6"), ExtResource("69_1fd0d"), ExtResource("70_0mjh4"), ExtResource("71_bkxpl"), ExtResource("72_y2jf0"), ExtResource("73_g33qm"), ExtResource("74_hy75c"), ExtResource("75_vaoao"), ExtResource("76_uaaia"), ExtResource("77_x1ulb")])
pride_balls = Array[Texture2D]([ExtResource("78_s33c4"), ExtResource("79_3hv4c"), ExtResource("78_k4q15"), ExtResource("81_vniw0"), ExtResource("82_lddog"), ExtResource("83_boxkr"), ExtResource("79_7bpt6"), ExtResource("85_de5we"), ExtResource("86_8tghg"), ExtResource("87_473mq"), ExtResource("80_rowo6"), ExtResource("89_1va0p"), ExtResource("90_2tvof"), ExtResource("91_fsry6"), ExtResource("92_eky20"), ExtResource("93_o3ulk"), ExtResource("94_ghitk"), ExtResource("95_rundi"), ExtResource("81_max3w"), ExtResource("82_nmeq6")])

[node name="BackgroundShaderRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_p57ef")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PlayerPaddle" type="CharacterBody2D" parent="."]
collision_mask = 2

[node name="Sprite" type="Sprite2D" parent="PlayerPaddle"]

[node name="PlayerPaddleCollision" type="CollisionShape2D" parent="PlayerPaddle"]
shape = SubResource("RectangleShape2D_lbhrr")

[node name="AIPaddle" type="CharacterBody2D" parent="."]
collision_mask = 2

[node name="Sprite" type="Sprite2D" parent="AIPaddle"]

[node name="AIPaddleCollision" type="CollisionShape2D" parent="AIPaddle"]
shape = SubResource("RectangleShape2D_p57ef")

[node name="Ball" type="CharacterBody2D" parent="."]
collision_layer = 2
motion_mode = 1

[node name="Sprite" type="Sprite2D" parent="Ball"]
scale = Vector2(4, 4)

[node name="BallCollision" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_iywne")

[node name="PlayerScoreLabel" type="Label" parent="."]
offset_left = 109.0
offset_right = 179.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_lnu2h")
theme_override_font_sizes/font_size = 70
text = "0"

[node name="AIScoreLabel" type="Label" parent="."]
offset_left = 1760.0
offset_top = 4.0
offset_right = 1830.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_lnu2h")
theme_override_font_sizes/font_size = 70
text = "0"
horizontal_alignment = 2

[node name="PlayerNameLabel" type="RichTextLabel" parent="."]
offset_left = 45.0
offset_top = 988.0
offset_right = 395.0
offset_bottom = 1038.0
theme_override_fonts/normal_font = ExtResource("2_lnu2h")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "Jasmine"
fit_content = true
autowrap_mode = 0
vertical_alignment = 2

[node name="AchievementBanner" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 1920.0
offset_top = 763.0
offset_right = 3253.0
offset_bottom = 975.0
texture = ExtResource("3_lnu2h")
stretch_mode = 2

[node name="AchievementAnimator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_p57ef")
}

[node name="MenuButton" type="TextureButton" parent="."]
offset_left = 1827.0
offset_right = 2059.0
offset_bottom = 237.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("5_iywne")
